[tool.poetry]
name = "foss505"
version = "0.1.0a0"
description = "The ultimate loop station."
license = "GPL-3.0-only"
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
repository = "https://github.com/ramazanemreosmanoglu/foss505"
readme = "README.md"
exclude = ["readme_assets"]

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = { version = "6.4.1", python = ">=3.10,<3.12" }
jack-client = "^0.5.4"
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foss505 = 'foss505:run'
